--- a/config/build.properties
+++ b/config/build.properties
@@ -7,6 +7,7 @@ devserver.js = C:/Users/nick/Documents/tools/dev_server/dev_server.js
 casper.js = C:/Users/nick/Documents/GAP project/libs/casperjs/bin/casperjs
 lessc = lessc.cmd
 uglify.js = uglifyjs.cmd
+r.js = r.js.cmd
 
 # Placeholders
 placeholder.js =        <!-- SCRIPTS -->
@@ -40,18 +41,23 @@ js.lib.dev =        app/util/shim.js,\
                     lib/backbone/backbone.js,\
                     lib/backbone-spf/spf.js,\
                     lib/d3/d3.js
-js.lib.min =        app/util/shim.js,\
+js.lib.min =        app/util/shim.min.js,\
                     lib/augment-0.3.1.min.js,\
+                    lib/requirejs/require.min.js,\
                     lib/underscore/underscore-min.js,\
-                    lib/jquery/jquery-ui-1.8.16.custom.min.js,\
                     lib/mxn/mxn-min.js,\
                     lib/mxn/mxn.core-min.js,\
                     lib/mxn/mxn.googlev3.core-min.js,\
-                    lib/timeline-2.3.0.js,\
-                    lib/timemap/timemap_full.pack.js,\
                     lib/backbone/backbone-min.js,\
-                    lib/backbone-spf/spf.js,\
                     lib/d3/d3.min.js
+js.lib.uglify =     lib/bootstrap/js/bootstrap-transition.js,\
+                    lib/bootstrap/js/bootstrap-button.js,\
+                    lib/bootstrap/js/bootstrap-modal.js,\
+                    lib/timemap/src/timemap.js,\
+                    lib/timemap/src/param.js,\
+                    lib/timemap/src/state.js,\
+                    lib/timemap/src/loaders/progressive.js,\
+                    lib/backbone-spf/spf.js
 js.libext =         lib/timemap/src/ext/circle_icons.js,\
                     lib/label_utils.js,\
                     app/util/patches.js
