--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/backbone-spf"]
 	path = lib/backbone-spf
-	url = c:/Users/nick/Documents/tools/backbone-spf
+	url = https://github.com/nrabinowitz/backbone-spf
