--- a/config/build.properties
+++ b/config/build.properties
@@ -41,7 +41,7 @@ js.lib.dev =        app/util/shim.js,\
                     lib/backbone/backbone.js,\
                     lib/backbone-spf/spf.js,\
                     lib/d3/d3.js
-js.lib.min =        app/util/shim.min.js,\
+js.lib.production.min = app/util/shim.min.js,\
                     lib/augment-0.3.1.min.js,\
                     lib/requirejs/require.min.js,\
                     lib/underscore/underscore-min.js,\
@@ -50,7 +50,7 @@ js.lib.min =        app/util/shim.min.js,\
                     lib/mxn/mxn.googlev3.core-min.js,\
                     lib/backbone/backbone-min.js,\
                     lib/d3/d3.min.js
-js.lib.uglify =     lib/bootstrap/js/bootstrap-transition.js,\
+js.lib.production.uglify = lib/bootstrap/js/bootstrap-transition.js,\
                     lib/bootstrap/js/bootstrap-button.js,\
                     lib/bootstrap/js/bootstrap-modal.js,\
                     lib/timemap/src/timemap.js,\
