Adding edit view for flagged places

--- a/config/build.properties
+++ b/config/build.properties
@@ -31,6 +31,7 @@ js.lib.dev =        app/util/shim.js,\
                     lib/bootstrap/js/bootstrap-transition.js,\
                     lib/bootstrap/js/bootstrap-button.js,\
                     lib/bootstrap/js/bootstrap-modal.js,\
+                    lib/bootstrap/js/bootstrap-tooltip.js,\
                     lib/mxn/mxn.js,\
                     lib/mxn/mxn.core.js,\
                     lib/mxn/mxn.googlev3.core.js,\
@@ -53,6 +54,7 @@ js.lib.production.min = app/util/shim.min.js,\
 js.lib.production.uglify = lib/bootstrap/js/bootstrap-transition.js,\
                     lib/bootstrap/js/bootstrap-button.js,\
                     lib/bootstrap/js/bootstrap-modal.js,\
+                    lib/bootstrap/js/bootstrap-tooltip.js,\
                     lib/timemap/src/timemap.js,\
                     lib/timemap/src/param.js,\
                     lib/timemap/src/state.js,\
@@ -63,19 +65,16 @@ js.libext =         lib/timemap/src/ext/circle_icons.js,\
                     app/util/patches.js
 
 # app directories
-js.app.models.dir =     app/models
-js.app.views.dir =      app/views
-js.app.layouts.dir =    app/layouts
-js.app.routers.dir =    app/routers
 js.app.templates.dir =  app/templates
+js.app.layouts.dir =    app/layouts
 
 # app scripts
-js.app.init =               app/app.js
-js.app.core =               app/settings.js,\
-                            ${js.app.models.dir}/Model.js,\
-                            ${js.app.layouts.dir}/Layout.js,\
-                            ${js.app.routers.dir}/Router.js,\
-                            ${js.app.views.dir}/BookView.js
+js.app.init.view =      app/app.js
+js.app.config.view =    app/config.js
+js.app.init.edit =      app/edit/app.js
+js.app.config.edit =    app/edit/config.js
+
+# uglify config
 js.settings.dev =           config/settings.dev.js
 js.settings.production =    config/settings.production.js
 
