--- a/build.xml
+++ b/build.xml
@@ -18,38 +18,23 @@
     <property name="build.dir" value="build" />
     <property name="target.dir" value="." />
     <property name="index.template" value="index.tmpl.html" />
-    <property name="index.build" value="${build.dir}/index.html" />
-    <property name="index.target" value="${target.dir}/index.html" />
-    
-    <property name="js.concat" value="scripts-${build.time}.js" />
-    <property name="js.concat.build" value="${build.dir}/${js.concat}" />
-    <property name="js.concat.target" value="${target.dir}/${js.concat}" />
-    <property name="js.rjs.target" value="${build.dir}/rjs_modules.js" />
-    
-    
-    <property name="css.concat" value="styles-${build.time}.css" />
-    <property name="css.concat.build" value="${build.dir}/${css.concat}" />
-    <property name="css.concat.target" value="${target.dir}/${css.concat}" />
-    
-    <!-- Get files for build -->
-    <pathconvert property="js.app.files" pathsep="," dirsep="/">
-        <filelist dir="." files="${js.app.core}"/>
-        <fileset dir="${js.app.models.dir}"/>
-        <fileset dir="${js.app.views.dir}"/>
-        <fileset dir="${js.app.routers.dir}"/>
-        <mapper type="glob" from="${basedir}${file.separator}*" to="*"/>
-    </pathconvert>
-    
-    <pathconvert property="js.app.templates.files" pathsep="," dirsep="/">
-        <fileset dir="${js.app.templates.dir}"/>
-        <fileset dir="${js.app.layouts.dir}"/>
-    </pathconvert>
     
     <!-- Build Targets -->
     
-    <target name="build-dev">
+    <target name="build-dev" depends="-view-settings">
         <property name="js.settings" value="${js.settings.dev}"/>
         <ant target="-start-build-dev"/>
+    </target>
+    
+    <target name="build-production" depends="-view-settings">
+        <property name="js.settings" value="${js.settings.production}"/>
+        <ant target="-start-build-production"/>
+    </target>
+                     
+    <target name="build-production-test" depends="-view-settings">
+        <property name="index.file" value="index.html" />
+        <property name="js.settings" value="${js.settings.dev}"/>
+        <ant target="-start-build-production"/>
     </target>
     
     <target name="build-dev-local">
@@ -57,15 +42,12 @@
         <ant target="build-dev"/>
     </target>
     
-    <target name="build-production">
-        <property name="js.settings" value="${js.settings.production}"/>
-        <ant target="-start-build-production"/>
-    </target>
-                     
-    <target name="build-production-test">
+    <target name="build-edit" depends="-edit-settings">
         <property name="js.settings" value="${js.settings.dev}"/>
-        <ant target="-start-build-production"/>
+        <ant target="-start-build-dev"/>
     </target>
+    
+    <!-- Private build targets -->
     
     <target name="-build-dev"
             depends="clean-build,
@@ -86,9 +68,45 @@
                      build-analytics,
                      compress-html,
                      finish-build"/>
+                     
+    <!-- Settings for builds -->
+    <target name="-view-settings">
+        <property name="index.file" value="index.html" />
+        <property name="app.file.prefix" value="view-" />
+        <property name="js.app.init" value="${js.app.init.view}" />
+        <property name="js.app.config" value="${js.app.config.view}" />
+    </target>
+    
+    <target name="-edit-settings">
+        <property name="index.file" value="edit.html" />
+        <property name="app.file.prefix" value="edit-" />
+        <property name="js.app.init" value="${js.app.init.edit}" />
+        <property name="js.app.config" value="${js.app.config.edit}" />
+    </target>
+    
+    <target name="-start-build-settings">
+    
+        <property name="index.build" value="${build.dir}/${index.file}" />
+        <property name="index.target" value="${target.dir}/${index.file}" />
+        
+        <property name="js.concat" value="scripts-${app.file.prefix}${build.time}.js" />
+        <property name="js.concat.build" value="${build.dir}/${js.concat}" />
+        <property name="js.concat.target" value="${target.dir}/${js.concat}" />
+        <property name="js.rjs.target" value="${build.dir}/rjs_modules.js" />
+        
+        <property name="css.concat" value="styles-${app.file.prefix}${build.time}.css" />
+        <property name="css.concat.build" value="${build.dir}/${css.concat}" />
+        <property name="css.concat.target" value="${target.dir}/${css.concat}" />
+        
+        <pathconvert property="js.app.templates.files" pathsep="," dirsep="/">
+            <fileset dir="${js.app.templates.dir}"/>
+            <fileset dir="${js.app.layouts.dir}"/>
+        </pathconvert>
+        
+    </target>
     
     <!-- Set properties for Dev build -->
-    <target name="-start-build-dev">
+    <target name="-start-build-dev" depends="-start-build-settings">
         <condition property="js.lib.remote" value="${js.lib.local}" else="${js.lib.nomunge}">
             <isset property="locallibs"/>
         </condition>
@@ -103,7 +121,7 @@
     </target>
     
     <!-- Set properties for Production build -->
-    <target name="-start-build-production">
+    <target name="-start-build-production" depends="-start-build-settings">
         <property name="js.uglify.files" 
                   value="${js.lib.production.uglify},
                          ${js.libext},
@@ -134,10 +152,10 @@
     <target name="clean-build">
         <delete file="${index.target}"/>
         <delete>
-            <fileset dir="." includes="scripts-*.js"/>
+            <fileset dir="." includes="scripts-${app.file.prefix}*.js"/>
         </delete>
         <delete>
-            <fileset dir="." includes="styles-*.css"/>
+            <fileset dir="." includes="styles-${app.file.prefix}*.css"/>
         </delete>
     </target>
     
@@ -287,7 +305,7 @@
         <echo>Optimizing Require.js Modules</echo>
         <!-- Get list of modules -->
         <exec executable="node" failonerror="true" outputproperty="js.rjs.modules">
-            <arg line="${config.dir}/get_modules.js"/>
+            <arg line="${config.dir}/get_modules.js ${js.app.config}"/>
         </exec>
         <echo>Found modules: ${js.rjs.modules}</echo>
         <!-- Run optimization -->
@@ -298,22 +316,6 @@
             <arg line="out=${js.rjs.target}"/>
         </exec>
     </target>
-    
-    <!-- Macro: Require.js -->
-    <!-- r.js -o baseUrl=./app include=gv,config out=test.r.js -->
-    <macrodef name="rjs">
-        <attribute name="module" default=""/>
-        <sequential>
-            <echo>Processing @{module}</echo>
-            <exec executable="${r.js}" failonerror="true">
-                <arg line="-o baseUrl=./src exclude=text"/>
-                <arg line="paths.jquery=empty:"/>
-                <arg line="paths.handlebars=lib/handlebars.runtime"/>
-                <arg line="paths.mustache=lib/mustache.0.5.0-dev"/>
-                <arg line="name=@{module} out=${tmp.dir}/@{module}.js"/>
-            </exec>
-        </sequential>
-    </macrodef>
     
     <!-- Deployment targets -->
     
@@ -352,7 +354,7 @@
                 <include name="images/**" if="deploy.full"/>
                 <include name="lib/**" if="deploy.full"/>
                 <include name="LICENSE.txt" if="deploy.full"/>
-                <include name="index.html"/>
+                <include name="${index.file}"/>
                 <include name="${js.concat}"/>
                 <include name="${css.concat}"/>
             </fileset>
