--- a/config/build.properties
+++ b/config/build.properties
@@ -68,11 +68,11 @@ js.libext =         lib/timemap/src/ext/circle_icons.js,\
 js.app.templates.dir =  app/templates
 js.app.layouts.dir =    app/layouts
 
-# app scripts
-js.app.init.view =      app/app.js
-js.app.config.view =    app/config.js
-js.app.init.edit =      app/edit/app.js
-js.app.config.edit =    app/edit/config.js
+# core app settings - override to change the app
+index.file =        index.html
+app.file.prefix =   gv-
+js.app.init =       app/app.js
+js.app.config =     app/config.js
 
 # uglify config
 js.settings.dev =           config/settings.dev.js
